# Gym-Management-System

./: .gitignore  README.md
backend/: pyproject.toml
backend/gym/: data.json  db.sqlite3  script.py  telegram_bot.py  test_groq.py
backend/gym/authen/: models.py  serializers.py  views.py
backend/gym/authen/migrations/: 0001_initial.py
backend/gym/bot/: tasks.py
backend/gym/bot/management/commands/: startbot.py
backend/gym/client/: admin.py  helper.py  models.py  serializers.py  urls.py  views.py
backend/gym/client/migrations/: 0001_initial.py  0002_client_day_number.py  0003_alter_muscleinformation_muscle_group_and_more.py  0004_alter_absence_unique_together.py  0005_alter_client_day_number_and_more.py  0006_remove_client_date_joined_client_user_and_more.py  0007_remove_client_id_number_alter_client_work_phone.py  0008_alter_absence_date_alter_clientimage_date_and_more.py  0009_client_gender_client_status_and_more.py
backend/gym/gym/: admin.py  celery.py  models.py  settings.py  urls.py
frontend/gym/: package-lock.json  package.json
frontend/gym/src/: App.js  index.js  store.js
frontend/gym/src/fetures/user/: loginSlice.js
frontend/gym/src/screens/: HomeScreen.js
