[tool.poetry]
name = "gym"
version = "0.1.0"
description = "gym management system"
authors = ["Abdelfattah Hamdi <abdelfattah.hamdy234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
pillow = "^10.4.0"
djangorestframework-simplejwt = "^5.3.1"
djangorestframework = "^3.15.2"
drf-yasg = "^1.21.7"
groq = "^0.9.0"
pytelegrambotapi = "^4.21.0"
celery = "^5.4.0"
redis = "^5.0.7"
django-jazzmin = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
